samples/_failures_safe/1761700027_ae1479_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e7abdf3.c: In function ‘main’:
./samples/SAFE/__tmp_4e7abdf3.c:146:5: error: expected expression at end of input
  146 |     int c =
      |     ^~~
./samples/SAFE/__tmp_4e7abdf3.c:146:5: error: expected declaration or statement at end of input
